--- a/src/main/resources/templates/admin/alumno/observaciondiaria/observaciones.html
+++ b/src/main/resources/templates/admin/alumno/observaciondiaria/observaciones.html
@@ -66,12 +66,34 @@
                                             </td>
                                             <td th:text="${#temporals.format(observacion.fechaCreacion, 'dd/MM/yyyy HH:mm')}">01/01/2024 10:00</td>
                                             <td>
-                                              <!--  <a th:href="@{/admin/alumno/observaciondiaria/{id}(id=${observacion.id})}" -->
-                                               <a th:href="@{/admin/alumno/observaciondiaria/{id}/editar(id=${observacion.id})}" 
-                                                   class="btn btn-sm btn-info" 
-                                                   title="Ver detalle">
-                                                    <i class="fas fa-eye"></i> Ver
-                                                </a>
+                                             
+												<!-- ADMIN -->
+												<div th:if="${#lists.contains(#authentication.authorities.![authority], 'ADMIN')}">
+												    <a th:href="@{/admin/alumno/observaciondiaria/{id}/editar(id=${observacion.id})}"
+												       class="btn btn-sm btn-info"
+												       title="Ver detalle">
+												        <i class="bi bi-eye"></i>
+												    </a>
+												</div>
+
+												<!-- TUTOR_PRACTICAS -->
+												<div th:if="${#lists.contains(#authentication.authorities.![authority], 'TUTOR_PRACTICAS')}">
+												    <a th:href="@{/tutorpracticas/observaciondiaria/{id}/editar(id=${observacion.id})}"
+												       class="btn btn-sm btn-info"
+												       title="Ver detalle">
+												        <i class="bi bi-eye"></i>
+												    </a>
+												</div>
+
+												<!-- TUTOR_CURSO -->
+												<div th:if="${#lists.contains(#authentication.authorities.![authority], 'TUTOR_CURSO')}">
+												    <a th:href="@{/tutorcurso/observaciondiaria/editar(id=${observacion.id})}"
+												       class="btn btn-sm btn-info"
+												       title="Ver detalle">
+												        <i class="bi bi-eye"></i>
+												    </a>
+												</div>
+
                                             </td>
                                         </tr>
                                     </tbody>
