--- a/src/main/resources/templates/tutorcurso/dashboard.html
+++ b/src/main/resources/templates/tutorcurso/dashboard.html
@@ -71,12 +71,12 @@
                     <div class="card-body">
                         <div class="row">
                             <div class="col-md-6 mb-3">
-                                <a href="#" class="btn btn-lg btn-outline-primary w-100">
+                                <a th:href="@{/tutorcurso/cursos}" class="btn btn-lg btn-outline-primary w-100">
                                     <i class="bi bi-book"></i><br>Ver Mis Cursos
                                 </a>
                             </div>
                             <div class="col-md-6 mb-3">
-                                <a href="#" class="btn btn-lg btn-outline-success w-100">
+                                <a th:href="@{/tutorcurso/alumno}" class="btn btn-lg btn-outline-success w-100">
                                     <i class="bi bi-people"></i><br>Ver Alumnos
                                 </a>
                             </div>
@@ -85,7 +85,7 @@
                 </div>
             </div>
         </div>
-
+<!--
         <div class="row mt-4">
             <div class="col-md-12">
                 <div class="card">
@@ -119,7 +119,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
